--- a/slide.css
+++ b/slide.css
@@ -79,13 +79,17 @@
   border: none;
   background: rgba(255, 255, 255, 0.08);
   backdrop-filter: blur(6px);
-  color: #ffffffaa;
+  color: #fff;
   font-weight: 700;
   cursor: none;
   display: grid;
   place-items: center;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
   transition: transform 160ms ease, background 180ms;
+}
+
+.slider-btn svg {
+  filter: drop-shadow(0px 1.5px 1.5px #00000080);
 }
 
 .slider-btn:hover {
