--- a/header.css
+++ b/header.css
@@ -100,7 +100,7 @@ nav .hide svg {
   
   nav {
     position: fixed;
-    top: 70px;
+    top: 60px;
     right: 0;
     background: var(--color1);
     height: calc(100% - 70px);
@@ -174,4 +174,21 @@ nav .hide svg {
 
 .s_bar input:focus~button {
   box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6);
+}
+
+#nav-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 500;
+  display: none;
+  transition: opacity 0.3s ease;
+}
+
+#nav-overlay.active {
+  display: block;
+  opacity: 1;
 }
