--- a/cart.css
+++ b/cart.css
@@ -94,6 +94,7 @@
   justify-content: space-between;
   align-items: flex-start;
   gap: 10px;
+  background: linear-gradient(0deg, #FCFCFF 90%, #FFFFFF 100%);
 }
 
 .meta .title {
