--- a/cart.css
+++ b/cart.css
@@ -654,3 +654,119 @@ label.zone-item:hover {
   transform: translateX(-50%) scale(1);
   visibility: visible;
 }
+
+#load_box {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0px auto;
+  height: 100px;
+  width: 200px;
+  top: 20%;
+}
+
+.ball {
+  position: absolute;
+  bottom: 0px;
+  display: block;
+  height: 0px;
+  width: 0px;
+  border: 10px solid black;
+  border-radius: 50%;
+  bottom: 10px;
+  float: left;
+  -webki-animation: bounce 3.5s infinite;
+  -moz-animation: bounce 3.5s infinite;
+  -ms-animation: bounce 3.5s infinite;
+  -o-animation: bounce 3.5s infinite;
+  animation: bounce 3.5s infinite;
+}
+
+
+.ball:nth-child(2) {
+  margin-left: 30%;
+  -webkit-animation-delay: 0.5s;
+  -moz-animation-delay: 0.5s;
+  -ms-animation-delay: 0.5s;
+  -o-animation-delay: 0.5s;
+  animation-delay: 0.5s;
+}
+
+.ball:nth-child(3) {
+  margin-left: 60%;
+  -webkit-animation-delay: 1s;
+  -moz-animation-delay: 1s;
+  -ms-animation-delay: 1s;
+  -o-animation-delay: 1s;
+  animation-delay: 1s;
+}
+
+.ball:nth-child(4) {
+  margin-left: 89%;
+  -webkit-animation-delay: 1.5s;
+  -moz-animation-delay: 1.5s;
+  -ms-animation-delay: 1.5s;
+  -o-animation-delay: 1.5s;
+  animation-delay: 1.5s;
+}
+
+
+@-webkit-keyframes bounce {
+  0% {
+    margin-bottom: 0px;
+  }
+  50% {
+    margin-bottom: 50px;
+  }
+  100% {
+    margin-bottom: 0px;
+  }
+}
+
+@-moz-keyframes bounce {
+  0% {
+    margin-bottom: 0px;
+  }
+  50% {
+    margin-bottom: 50px;
+  }
+  100% {
+    margin-bottom: 0px;
+  }
+}
+
+@-o-keyframes bounce {
+  0% {
+    margin-bottom: 0px;
+  }
+  50% {
+    margin-bottom: 50px;
+  }
+  100% {
+    margin-bottom: 0px;
+  }
+}
+
+@-ms-keyframes bounce {
+  0% {
+    margin-bottom: 0px;
+  }
+  50% {
+    margin-bottom: 50px;
+  }
+  100% {
+    margin-bottom: 0px;
+  }
+}
+
+@-keyframes bounce {
+  0% {
+    margin-bottom: 0px;
+  }
+  50% {
+    margin-bottom: 50px;
+  }
+  100% {
+    margin-bottom: 0px;
+  }
+}
